--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<h1 style="text-align: center;"><strong>ПОШЕЛ НАХУЙ&nbsp;<br /></strong></h1>
+<h1 style="text-align: center;"><strong>Welcome to hell :)&nbsp;<br /></strong></h1>
 <p><strong><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.fishki.net/upload/post/2020/02/26/3240337/tn/6df94918d0adf8f7f860dcde5ed950ec.jpg" alt="https://cdn.fishki.net/upload/post/2020/02/26/3240337/tn/6df94918d0adf8f7f860dcde5ed950ec.jpg" width="255" height="253" /></strong></p>
-<h1 style="text-align: center;"><strong>СНОСИ ВИНДУ МЕНЯЙ ПАРОЛИ КАВАСАКИ УЖЕ ПОЛУЧИЛ ВАШИ УЧЕТКИ</strong></h1>
+<h1 style="text-align: center;"><strong>Passwords destroyed by honda</strong></h1>
